--- a/Turgo/View/RoundView.xaml
+++ b/Turgo/View/RoundView.xaml
@@ -3,16 +3,42 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:common="clr-namespace:Sramek.FX.WPF;assembly=Sramek.FX"
+             xmlns:turgo="clr-namespace:Turgo"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="5" />
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <ListView ItemsSource="{Binding Games}" />
-        <Grid Grid.Column="1" x:Name="GameViews" >
-             
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <ListView ItemsSource="{Binding Games}" DisplayMemberPath="ShowName" SelectedItem="{Binding SelectedGame}" >
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseDoubleClick">
+                        <i:InvokeCommandAction  Command="{Binding SelectGameCommand}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ListView>
+            <!--<ListView Grid.Row="1" ItemsSource="{Binding FinishedGames}" SelectedItem="{Binding SelectedGame}" >
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseDoubleClick">
+                        <i:InvokeCommandAction  Command="{Binding SelectGameCommand}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ListView>-->
+            <Button Grid.Row="2" Command="{Binding EndRoundCommand}" Content="{Binding EndRound, Source={x:Static turgo:TurgoLoc.I}}"/>
         </Grid>
+
+        <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch" />
+        <Grid Grid.Column="2" x:Name="GameViews"/>
     </Grid>
 </UserControl>
