--- a/Turgo/MainWindow.xaml
+++ b/Turgo/MainWindow.xaml
@@ -19,6 +19,7 @@
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands>
             <Button Content="{Binding Players, Source={x:Static common:TurgoLoc.I}}" Command="{Binding ShowTabCommand}" CommandParameter="Players"/>
+            <Button Content="{Binding TotalResults, Source={x:Static common:TurgoLoc.I}}" Command="{Binding ShowTabCommand}" CommandParameter="TotalResult"/>
             <Button Command="{Binding ShowTabCommand}" CommandParameter="RoundFactory">
                 <Button.Content>
                     <TextBlock>
