--- a/Turgo/View/RoundFactoryView.xaml
+++ b/Turgo/View/RoundFactoryView.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Turgo.View"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:turgo="clr-namespace:Turgo"
              xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d" 
@@ -40,20 +39,7 @@
                         </TextBlock>
                     </Label.Content>
                 </Label>
-                <Label Grid.Row="2">
-                    <Label.Content>
-                        <TextBlock>
-                            <TextBlock.Text>
-                                <MultiBinding StringFormat="{}{0} {1}:">
-                                    <MultiBinding.Bindings>
-                                        <Binding Source="{x:Static turgo:TurgoLoc.I}" Path="Count"/>
-                                        <Binding Source="{x:Static turgo:TurgoLoc.I}" Path="Count"/>
-                                    </MultiBinding.Bindings>
-                                </MultiBinding>
-                            </TextBlock.Text>
-                        </TextBlock>
-                    </Label.Content>
-                </Label>
+                <Label Grid.Row="2" Content="{Binding CourtCount, Source={x:Static turgo:TurgoLoc.I}}"/>
                 <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding PlayersCount}" />
                 <controls:NumericUpDown Grid.Row="2" Grid.Column="2" Value="{Binding CourtCount}" Minimum="1" Maximum="8" MinWidth="80"/>
             </Grid>
@@ -82,13 +68,13 @@
         </ListBox>
         
         <WrapPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Command="{Binding PrintPDFCommand}">
-                <Button.Content>
+            <Button Command="{Binding OpenRoundCommand}" Content="{Binding Start, Source={x:Static turgo:TurgoLoc.I}}">
+                <!--<Button.Content>
                     <MultiBinding StringFormat="{}{0} {1}"><MultiBinding.Bindings>
                         <Binding Source="{x:Static turgo:TurgoLoc.I}" Path="Print"/>
                         <Binding Source="{x:Static turgo:TurgoLoc.I}" Path="PDF"/>
                     </MultiBinding.Bindings></MultiBinding>
-                </Button.Content>
+                </Button.Content>-->
             </Button>
         </WrapPanel>
     </Grid>
