--- a/Turgo/View/ResultsView.xaml
+++ b/Turgo/View/ResultsView.xaml
@@ -12,7 +12,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <ListView ItemsSource="{Binding RoundResultList}" DisplayMemberPath="Item2" />
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Command="{Binding ShowTotalResultsCommnad}" Content="{Binding TotalResults, Source={x:Static turgo:TurgoLoc.I}}" />
             <Button Command="{Binding ExportCommand}" Content="{Binding Export, Source={x:Static turgo:TurgoLoc.I}}" />
         </StackPanel>
